--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,17 @@
 {
 	"author": "Michel Boudreau",
 	"name": "angular-service-factory",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"repository": {
 		"type": "git",
 		"url": "git@github.com:mboudreau/angular-service-factory.git"
 	},
 	"main": "angular-service-factory.js",
 	"dependencies": {
-		"angular": "1.3.0-rc.5"
+		"angular": ">=1.2.0"
 	},
 	"devDependencies": {
-		"angular-mocks": "1.3.0-rc.5"
+		"angular-mocks": ">=1.2.0"
 	},
-	"resolutions": {
-		"angular": "1.3.0-rc.5",
-		"angular-mocks": "1.3.0-rc.5"
-	},
-	"ignore": [
-
-	]
+	"ignore": []
 }
